--- a/package.json
+++ b/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "notebook",
+  "name": "landing_notebook",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "devDependencies": {
+  "dependencies": {
     "browser-sync": "^2.27.11",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^6.1.0",
+    "gulp-autoprefixer": "^8.0.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.58.0"
-  },
-  "browserslist": [
-    "last 1 version",
-    "> 1%",
-    "not dead"
-  ],
-  "description": ""
+  }
 }
